--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -322,9 +322,9 @@
     .navbar-toggler {
         position: absolute !important;
         top: auto;
-        right: 0;
+        left: 0;
         bottom: auto;
-        left: auto;
+        right: auto;
         border: none;
         height: 100%;
         width: 3.75rem;
